# Rich-Airbnb

./: .env.example  .gitignore  NEXT_STEPS.md  README.md  alembic.ini  config.yaml  pyproject.toml
alembic/: env.py
src/proppilot/: __init__.py  app.py  config.py  database.py  events.py  scheduler.py
src/proppilot/config/templates/: check_in_instructions.txt  checkout_reminder.txt  review_request.txt  welcome.txt
src/proppilot/dashboard/static/: style.css
src/proppilot/dashboard/templates/: base.html  bookings.html  cleaning.html  financial.html  index.html  inventory.html  maintenance.html  messages.html  pricing.html
src/proppilot/models/: __init__.py  booking.py  expense.py  message.py  payout.py  property.py  task.py
src/proppilot/modules/calendar_sync/: __init__.py  sync.py
src/proppilot/modules/email_parser/: __init__.py  parser.py
src/proppilot/modules/financial/: __init__.py  tracker.py
src/proppilot/modules/guest_comms/: __init__.py  comms.py
src/proppilot/modules/operations/: __init__.py  ops.py
src/proppilot/modules/pricing/: __init__.py  engine.py
tests/: conftest.py  test_app.py  test_calendar_sync.py  test_calendar_sync_integration.py  test_email_parser.py  test_end_to_end.py  test_events.py  test_financial.py  test_financial_integration.py  test_guest_comms.py  test_models.py  test_operations.py  test_pricing.py
tests/fixtures/: sample.ics  sample_emails.py
